# QR_generator

./: .gitignore  README.md  generate_qr.py  pyproject.toml
