[project]
name = "qr-generator"
version = "0.1.0"
description = "Simple CLI to generate QR codes (PNG) for a single URL"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "qrcode[pil]>=7.4,<8.0",
]

[project.scripts]
generate-qr = "generate_qr:main"

[tool.uv]
dev-dependencies = []


